# DZMLang

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  app.cpp  build.bat  ctime.c  dzm.h  dzm_log.h  dzm_mem.h  dzm_utl.h  dzm_ver.h  dzm_ver.hpp  index.html  params.json  stdlib.dzm  stdlib.scm  test.c  test_compiler.dzm
lang/: dzm_evl.h  dzm_lex.h  dzm_mdl.h  dzm_prc.h  dzm_prt.h  dzm_rep.h
lib/: math.scm  set.scm
pr/: dzm_pr.h
src/: app.cpp  dzm.h  dzm.hpp  dzm_log.h  dzm_log.hpp  dzm_mem.h  dzm_mem.hpp  dzm_utl.h  dzm_utl.hpp  test.c  test.cpp
src/lang/: dzm_evl.h  dzm_evl.hpp  dzm_lex.h  dzm_lex.hpp  dzm_mdl.h  dzm_mdl.hpp  dzm_prc.h  dzm_prc.hpp  dzm_prt.h  dzm_prt.hpp  dzm_rep.h  dzm_rep.hpp  dzm_srl.hpp
src/lang/evl/: evl_apl.h  evl_apl.hpp  evl_app.h  evl_app.hpp  evl_cond.h  evl_cond.hpp  evl_evl.h  evl_evl.hpp  evl_lbd.h  evl_lbd.hpp  evl_lit.h  evl_lit.hpp  evl_mod.h  evl_mod.hpp  evl_ops.h  evl_ops.hpp
src/lang/lex/: lex_scm.hpp  lex_test.hpp
src/lang/prc/: prc_net.h  prc_net.hpp  prc_thd.hpp
std/: math.scm  set.scm  stdlib.scm
tests/: calc.dzm  calc.scm  coins.scm  demo-net-managed.scm  demo-net.scm  eval_t.scm  hello.dzm  map.dzm  map.scm  misc.scm  oop_example.scm  pipechat.scm  points2D.scm  repl.dzm  test.dzm  test.scm
tests/mceval/: run-mceval.scm
vs2015/win32/: win32.sln  win32.vcxproj  win32.vcxproj.filters
